# data-observability-platform

./: .env.example  .gitignore  Dockerfile  MONITORING_LOGS_SAMPLE.md  Makefile  OBSERVABILITY_ARCHITECTURE.md  PRODUCTION_HARDENING_AUDIT.md  README.md  pyproject.toml  requirements.txt
config/: databases.yaml
contracts/: cdc_order_contract.yaml
data/: README.md
data/input/: sample_cdc_logs.json  sample_metrics.csv
data/output/: alerts.csv  baselines.csv  sample_health_report.md
docs/: README.md  architecture-diagram-placeholder.md  architecture.md
scripts/: generate_scorecard.py  setup_monitoring.py
src/: config_manager.py  contract_guard.py  database_manager.py  detector.py  orchestrator.py  production_detector.py  production_orchestrator.py  production_profiler.py  profiler.py
tests/: chaos_contract.py  chaos_freshness.py  chaos_volume.py  test_core_functionality.py
